--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="img/favicon.png">
   </head>
   <body>
+
     <header>     <!-- inicio cabeçalho -->
       <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
         <div class="container">
@@ -29,7 +30,7 @@
             <i class="fas fa-bars text-white"></i>
           </button>
 
-          <div class="collapse navbar-collapse" id="nav-principal">
+          <div class="collapse navbar-collapse" id="nav-principal"><!-- inicio barra de navegação -->
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a href="" class="nav-link">Premium</a>
@@ -50,11 +51,23 @@
                 <a href="" class="nav-link">Entrar</a>
               </li>
             </ul>
-          </div>
-
+          </div><!-- fim barra de navegação -->
         </div>
       </nav>
     </header>    <!-- fim cabeçalho -->
+
+    <section id="home" class="d-flex"><!-- inicio home -->
+      <div class="container align-self-center">
+        <div class="row">
+          <div class="col-md-12 capa">
+            <h1 class="display-1">Música para todos</h1>
+            <a href="" class="btn btn-danger btn-lg">Aproveite o Spotify Free</a>
+            <a href="" class="btn btn-light btn-lg">Obter Spotify Premium</a>
+          </div>
+        </div>
+      </div>
+    </section><!-- fim home -->
+
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
