--- a/index.html
+++ b/index.html
@@ -60,14 +60,55 @@
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
-            <h1 class="display-1">Música para todos</h1>
-            <a href="" class="btn btn-danger btn-lg">Aproveite o Spotify Free</a>
-            <a href="" class="btn btn-light btn-lg">Obter Spotify Premium</a>
+            <h1>Música para todos</h1>
+            <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
+            <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>
           </div>
         </div>
       </div>
     </section><!-- fim home -->
 
+    <section id="servicos"><!-- inicio conteúdo -->
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="row mb-2 p-2">
+                <div class="col-md-6">
+                  <img class="img-fluid d-none d-md-block" src="img/img1.jpg" alt="capa justin bieber">
+                </div>
+                <div class="col-md-6">
+                  <img class="img-fluid d-none d-md-block" src="img/img2.jpg" alt="capa trapsoul">
+                </div>
+              </div><!-- /row1 -->
+              <div class="row  p-2">
+                <div class="col-md-6">
+                  <img class="img-fluid d-none d-md-block" src="img/img3.jpg" alt="capa Zara Larsson">
+                </div>
+                <div class="col-md-6">
+                  <img class="img-fluid d-none d-md-block" src="img/img4.jpg" alt="capa Dnya">
+                </div>
+              </div><!-- /row2 -->
+            </div><!-- /imagens -->
+
+            <div class="col-md-6">
+              <h2 class="display-5">O que o Spotify tem?</h2>
+
+              <h3>Músicas</h3>
+              <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+              <h3>Playlists</h3>
+              <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música</p>
+
+              <h3>Novo lançamentos</h3>
+              <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
+            </div><!-- /textos -->
+          </div><!-- /row -->
+        </div><!-- /container -->
+    </section><!-- fim conteúdo -->
+
+    <section id="recursos">
+      
+    </section>
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
