--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
       </nav>
     </header>    <!-- fim cabeçalho -->
 
-    <section id="home" class="d-flex"><!-- inicio home -->
+    <section id="home" class="d-flex">  <!-- inicio home -->
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
             <h1>Música para todos</h1>
-            <a href="" class="btn btn-custom btn-roxo btn-lg">Aproveite o Spotify Free</a>
-            <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>
+            <a href="" class="btn btn-custom btn-roxo">Aproveite o Spotify Free</a>
+            <a href="" class="btn btn-custom btn-branco">Obter Spotify Premium</a>
           </div>
         </div>
       </div>
-    </section><!-- fim home -->
+    </section>  <!-- fim home -->
 
-    <section id="servicos"><!-- inicio conteúdo -->
+    <section id="servicos"> <!-- inicio conteúdo -->
         <div class="container">
           <div class="row">
             <div class="col-md-6">
@@ -99,16 +99,96 @@
               <h3>Playlists</h3>
               <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música</p>
 
-              <h3>Novo lançamentos</h3>
+              <h3>Novos lançamentos</h3>
               <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
             </div><!-- /textos -->
           </div><!-- /row -->
         </div><!-- /container -->
-    </section><!-- fim conteúdo -->
+    </section>  <!-- fim conteúdo -->
 
-    <section id="recursos">
-      
-    </section>
+    <section id="recursos"> <!-- inicio recursos -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <h2 class="display-5">Fácil</h2>
+
+              <h3>Buscas</h3>
+              <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+              <h3>Navegar</h3>
+              <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+              <h3>Descobrir</h3>
+              <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+          </div><!-- /textos -->
+
+          <div class="col-md-8">
+            <div class="row  rotate-img">
+              <div class="col-md-6">
+                <img class="img-fluid d-none d-md-block"  src="img/iphone1.png" alt="imagem iphone">
+              </div>
+              <div class="col-md-6">
+                <img class="img-fluid d-none d-md-block"  src="img/iphone2.png" alt="imagem iphone">
+              </div>
+            </div>
+          </div><!-- /imagens -->
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </section>  <!-- fim recursos -->
+
+    <footer>  <!-- inicio footer -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="img/spotify.svg" width="142" alt="logo spotify">
+          </div>
+          <div class="col-md-2">
+            <h4>Company</h4>
+            <ul class="navbar-nav">
+              <li><a href="">Sobre</a></li>
+              <li><a href="">Empregos</a></li>
+              <li><a href="">Imprensa</a></li>
+              <li><a href="">Novidades</a></li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4>Comunidades</h4>
+            <ul class="navbar-nav">
+              <li><a href="">Artistas</a></li>
+              <li><a href="">Desenvolvedores</a></li>
+              <li><a href="">Marcas</a></li>
+            </ul>
+          </div>
+          <div class="col-md-2">
+            <h4>Links Uteis</h4>
+            <ul class="navbar-nav">
+              <li><a href="">Ajuda</a></li>
+              <li><a href="">Presentes</a></li>
+              <li><a href="">Player da web</a></li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul >
+              <li>
+                <a href="">
+                  <img src="img/facebook.png" alt="logo facebook">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="img/instagram.png" alt="logo instagram">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="img/twitter.png" alt="logo twitter">
+                </a>  
+              </li>
+            </ul>
+          </div>
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </footer> <!-- fim footer -->
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
