--- a/index.html
+++ b/index.html
@@ -56,17 +56,42 @@
       </nav>
     </header>    <!-- fim cabeçalho -->
 
-    <section id="home" class="d-flex">  <!-- inicio home -->
+    <section id="home" class="d-flex"><!-- inicio home-carousel -->
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
-            <h1>Música para todos</h1>
-            <a href="" class="btn btn-custom btn-roxo">Aproveite o Spotify Free</a>
-            <a href="" class="btn btn-custom btn-branco">Obter Spotify Premium</a>
+            <div id="carousel-controles" class="carousel slide" data-ride="carousel"><!--Carousel -->
+              <div class="carousel-inner"><!--Inner -->
+                
+                <div class="carousel-item active">
+                  <h1>Música para todos</h1>
+                  <a href="" class="btn btn-custom btn-roxo">Aproveite o Spotify Free</a>
+                  <a href="" class="btn btn-custom btn-branco">Obter Spotify Premium</a>
+                </div>
+  
+                <div class="carousel-item">
+                  <h1>Suas playlists</h1>
+                  <a href="" class="btn btn-custom btn-branco">Crie a sua playlist</a>
+                </div>
+  
+                <div class="carousel-item">
+                  <h1>As melhores rádios</h1>
+                  <a href="" class="btn btn-custom btn-branco">Ouça agora</a>
+                </div>
+              </div><!--/Inner -->
+  
+              <!-- Controles -->
+              <a href="#carousel-controles" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon mr-5"></span>
+              </a>
+              <a href="#carousel-controles" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon ml-5"></span>
+              </a>
+            </div><!-- /Carousel -->
           </div>
-        </div>
-      </div>
-    </section>  <!-- fim home -->
+        </div><!-- /row -->
+      </div><!-- /container -->
+    </section><!-- fim home-carousel -->
 
     <section id="servicos"> <!-- inicio conteúdo -->
         <div class="container">
