--- a/index.html
+++ b/index.html
@@ -2,35 +2,55 @@
 <html lang="pt-br">
   <head>
     <!-- Meta tags Obrigatórias -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+      crossorigin="anonymous"
+    />
 
     <!-- Estilo customizado -->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <title>Música para todos - Spotify</title>
-    <link rel="icon" href="img/favicon.png">
+    <link rel="icon" href="img/favicon.png" />
   </head>
   <body>
-
-    <header>     <!-- inicio cabeçalho -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente">
+    <header>
+      <!-- inicio cabeçalho -->
+      <nav
+        class="navbar navbar-expand-md navbar-light fixed-top navbar-transparente"
+      >
         <div class="container">
           <a href="#" class="navbar-brand">
-            <img src="img/spotify.svg" alt="logo spotify" width="142">
+            <img src="img/spotify.svg" alt="logo spotify" width="142" />
           </a>
 
-          <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-principal">
+          <button
+            class="navbar-toggler"
+            data-toggle="collapse"
+            data-target="#nav-principal"
+          >
             <i class="fas fa-bars text-white"></i>
           </button>
 
-          <div class="collapse navbar-collapse" id="nav-principal"><!-- inicio barra de navegação -->
+          <div class="collapse navbar-collapse" id="nav-principal">
+            <!-- inicio barra de navegação -->
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a href="" class="nav-link">Premium</a>
@@ -41,9 +61,7 @@
               <li class="nav-item">
                 <a href="" class="nav-link">Baixar</a>
               </li>
-              <li class="nav-item divisor">
-                
-              </li>
+              <li class="nav-item divisor"></li>
               <li class="nav-item">
                 <a href="" class="nav-link">Inscrever-se</a>
               </li>
@@ -51,121 +69,203 @@
                 <a href="" class="nav-link">Entrar</a>
               </li>
             </ul>
-          </div><!-- fim barra de navegação -->
+          </div>
+          <!-- fim barra de navegação -->
         </div>
       </nav>
-    </header>    <!-- fim cabeçalho -->
+    </header>
+    <!-- fim cabeçalho -->
 
-    <section id="home" class="d-flex"><!-- inicio home-carousel -->
+    <section id="home" class="d-flex">
+      <!-- inicio home-carousel -->
       <div class="container align-self-center">
         <div class="row">
           <div class="col-md-12 capa">
-            <div id="carousel-controles" class="carousel slide" data-ride="carousel"><!--Carousel -->
-              <div class="carousel-inner"><!--Inner -->
-                
+            <div
+              id="carousel-controles"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <!--Carousel -->
+              <div class="carousel-inner">
+                <!--Inner -->
+
                 <div class="carousel-item active">
                   <h1>Música para todos</h1>
-                  <a href="" class="btn btn-custom btn-roxo">Aproveite o Spotify Free</a>
-                  <a href="" class="btn btn-custom btn-branco">Obter Spotify Premium</a>
+                  <a href="" class="btn btn-custom btn-roxo"
+                    >Aproveite o Spotify Free</a
+                  >
+                  <a href="" class="btn btn-custom btn-branco"
+                    >Obter Spotify Premium</a
+                  >
                 </div>
-  
+
                 <div class="carousel-item">
                   <h1>Suas playlists</h1>
-                  <a href="" class="btn btn-custom btn-branco">Crie a sua playlist</a>
+                  <a href="" class="btn btn-custom btn-branco"
+                    >Crie a sua playlist</a
+                  >
                 </div>
-  
+
                 <div class="carousel-item">
                   <h1>As melhores rádios</h1>
                   <a href="" class="btn btn-custom btn-branco">Ouça agora</a>
                 </div>
-              </div><!--/Inner -->
-  
+              </div>
+              <!--/Inner -->
+
               <!-- Controles -->
-              <a href="#carousel-controles" class="carousel-control-prev" data-slide="prev">
+              <a
+                href="#carousel-controles"
+                class="carousel-control-prev"
+                data-slide="prev"
+              >
                 <span class="carousel-control-prev-icon mr-5"></span>
               </a>
-              <a href="#carousel-controles" class="carousel-control-next" data-slide="next">
+              <a
+                href="#carousel-controles"
+                class="carousel-control-next"
+                data-slide="next"
+              >
                 <span class="carousel-control-next-icon ml-5"></span>
               </a>
-            </div><!-- /Carousel -->
+            </div>
+            <!-- /Carousel -->
           </div>
-        </div><!-- /row -->
-      </div><!-- /container -->
-    </section><!-- fim home-carousel -->
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </section>
+    <!-- fim home-carousel -->
 
-    <section id="servicos"> <!-- inicio conteúdo -->
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="row mb-2 p-2">
-                <div class="col-md-6">
-                  <img class="img-fluid d-none d-md-block" src="img/img1.jpg" alt="capa justin bieber">
-                </div>
-                <div class="col-md-6">
-                  <img class="img-fluid d-none d-md-block" src="img/img2.jpg" alt="capa trapsoul">
-                </div>
-              </div><!-- /row1 -->
-              <div class="row  p-2">
-                <div class="col-md-6">
-                  <img class="img-fluid d-none d-md-block" src="img/img3.jpg" alt="capa Zara Larsson">
-                </div>
-                <div class="col-md-6">
-                  <img class="img-fluid d-none d-md-block" src="img/img4.jpg" alt="capa Dnya">
-                </div>
-              </div><!-- /row2 -->
-            </div><!-- /imagens -->
+    <section id="servicos">
+      <!-- inicio conteúdo -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="row mb-2 p-2">
+              <div class="col-md-6">
+                <img
+                  class="img-fluid d-none d-md-block"
+                  src="img/img1.jpg"
+                  alt="capa justin bieber"
+                />
+              </div>
+              <div class="col-md-6">
+                <img
+                  class="img-fluid d-none d-md-block"
+                  src="img/img2.jpg"
+                  alt="capa trapsoul"
+                />
+              </div>
+            </div>
+            <!-- /row1 -->
+            <div class="row p-2">
+              <div class="col-md-6">
+                <img
+                  class="img-fluid d-none d-md-block"
+                  src="img/img3.jpg"
+                  alt="capa Zara Larsson"
+                />
+              </div>
+              <div class="col-md-6">
+                <img
+                  class="img-fluid d-none d-md-block"
+                  src="img/img4.jpg"
+                  alt="capa Dnya"
+                />
+              </div>
+            </div>
+            <!-- /row2 -->
+          </div>
+          <!-- /imagens -->
 
-            <div class="col-md-6">
-              <h2 class="display-5">O que o Spotify tem?</h2>
+          <div class="col-md-6">
+            <h2 class="display-5">O que o Spotify tem?</h2>
 
-              <h3>Músicas</h3>
-              <p>O Spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+            <h3>Músicas</h3>
+            <p>
+              O Spotify tem milhões de músicas. Escute seus sons favoritos,
+              descubra novas músicas e reúna seus favoritos em um só lugar.
+            </p>
 
-              <h3>Playlists</h3>
-              <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas da música</p>
+            <h3>Playlists</h3>
+            <p>
+              No Spotify você encontra uma playlist para cada momento. Todas
+              feitas por fanáticos e especialistas da música
+            </p>
 
-              <h3>Novos lançamentos</h3>
-              <p>Escute os novos lançamentos de singles e álbuns da semana e veja o que está bombando no Top 50.</p>
-            </div><!-- /textos -->
-          </div><!-- /row -->
-        </div><!-- /container -->
-    </section>  <!-- fim conteúdo -->
+            <h3>Novos lançamentos</h3>
+            <p>
+              Escute os novos lançamentos de singles e álbuns da semana e veja o
+              que está bombando no Top 50.
+            </p>
+          </div>
+          <!-- /textos -->
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </section>
+    <!-- fim conteúdo -->
 
-    <section id="recursos"> <!-- inicio recursos -->
+    <section id="recursos">
+      <!-- inicio recursos -->
       <div class="container">
         <div class="row">
           <div class="col-md-4">
             <h2 class="display-5">Fácil</h2>
 
-              <h3>Buscas</h3>
-              <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+            <h3>Buscas</h3>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
 
-              <h3>Navegar</h3>
-              <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+            <h3>Navegar</h3>
+            <p>
+              Veja os novos lançamentos, o que está bombando nas paradas e as
+              melhores playlists para o seu momento.
+            </p>
 
-              <h3>Descobrir</h3>
-              <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
-          </div><!-- /textos -->
+            <h3>Descobrir</h3>
+            <p>
+              Curta músicas novas toda segunda-feira com uma playlist
+              personalizada pra você. Ou relaxe e curta uma das rádios.
+            </p>
+          </div>
+          <!-- /textos -->
 
           <div class="col-md-8">
-            <div class="row  rotate-img">
+            <div class="row rotate-img">
               <div class="col-md-6">
-                <img class="img-fluid d-none d-md-block"  src="img/iphone1.png" alt="imagem iphone">
+                <img
+                  class="img-fluid d-none d-md-block"
+                  src="img/iphone1.png"
+                  alt="imagem iphone"
+                />
               </div>
               <div class="col-md-6">
-                <img class="img-fluid d-none d-md-block"  src="img/iphone2.png" alt="imagem iphone">
+                <img
+                  class="img-fluid d-none d-md-block"
+                  src="img/iphone2.png"
+                  alt="imagem iphone"
+                />
               </div>
             </div>
-          </div><!-- /imagens -->
-        </div><!-- /row -->
-      </div><!-- /container -->
-    </section>  <!-- fim recursos -->
+          </div>
+          <!-- /imagens -->
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </section>
+    <!-- fim recursos -->
 
-    <footer>  <!-- inicio footer -->
+    <footer>
+      <!-- inicio footer -->
       <div class="container">
         <div class="row">
           <div class="col-md-2">
-            <img src="img/spotify.svg" width="142" alt="logo spotify">
+            <img src="img/spotify.svg" width="142" alt="logo spotify" />
           </div>
           <div class="col-md-2">
             <h4>Company</h4>
@@ -193,32 +293,47 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <ul >
+            <ul>
               <li>
                 <a href="">
-                  <img src="img/facebook.png" alt="logo facebook">
+                  <img src="img/facebook.png" alt="logo facebook" />
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="img/instagram.png" alt="logo instagram">
+                  <img src="img/instagram.png" alt="logo instagram" />
                 </a>
               </li>
               <li>
                 <a href="">
-                  <img src="img/twitter.png" alt="logo twitter">
-                </a>  
+                  <img src="img/twitter.png" alt="logo twitter" />
+                </a>
               </li>
             </ul>
           </div>
-        </div><!-- /row -->
-      </div><!-- /container -->
-    </footer> <!-- fim footer -->
+        </div>
+        <!-- /row -->
+      </div>
+      <!-- /container -->
+    </footer>
+    <!-- fim footer -->
 
     <!-- JavaScript (Opcional) -->
     <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
